WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
200435
iOS 13: Overflow:hidden on body prevents PDF scroll
https://bugs.webkit.org/show_bug.cgi?id=200435
Summary
iOS 13: Overflow:hidden on body prevents PDF scroll
Michiel De Backker
Reported
2019-08-05 06:46:23 PDT
Test device: IOS 13.0 Beta 4 (17A5547d) on iPad Pro 10.5-inch (MPMF2NF/A). Adding the overflow:hidden property to the body of a page blocks scrolling in any PDF file opened from that page. Minimal reproduction scenario: Given the following html page: <html> <head> </head> <body style="overflow:hidden;"> <a href='/test.pdf'>Open me</a> </body> </html> When clicking on "Open me" opens the PDF file but the user can't scroll in it. It remains stuck at the top of the document. Expected behavior: The PDF file is scroll-able as works on desktop.
Attachments
Patch
(3.87 KB, patch)
2019-08-05 15:06 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-08-05 08:21:38 PDT
<
rdar://problem/53942888
>
Simon Fraser (smfr)
Comment 2
2019-08-05 11:36:26 PDT
Uh oh.
Tim Horton
Comment 3
2019-08-05 12:26:16 PDT
- (void)_setHasCustomContentView:loadedMIMEType: needs to reset the scrollability bit
Simon Fraser (smfr)
Comment 4
2019-08-05 15:06:48 PDT
Created
attachment 375564
[details]
Patch
WebKit Commit Bot
Comment 5
2019-08-05 17:32:04 PDT
Comment on
attachment 375564
[details]
Patch Clearing flags on attachment: 375564 Committed
r248281
: <
https://trac.webkit.org/changeset/248281
>
WebKit Commit Bot
Comment 6
2019-08-05 17:32:05 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug